# protomesh

./: .example.env  .gitignore  LICENSE-MIT  README.md  main.py  pyproject.toml
protomesh/adapters/: crewai_adapter.py  langgraph_adapter.py
protomesh/core/: governance.py  mesh.py  state.py  tracing.py
protomesh/examples/: demo_workflow.py
tests/: test_core.py
