[project]
name = "protomesh"
version = "0.1.0"
description = "Cross-framework orchestration for AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "langgraph>=0.0.10",
    "langchain>=0.1.0",
    "crewai[tools]>=0.1.0",
    "redis>=5.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pytest>=7.0.0",
    "langchain-google-genai>=0.0.1",
]
